# Graphics

./: .gitignore  README.md  generate_data.py  generate_data2.py  preview.html  pyproject.toml  run_chapters.py  run_chapters_menu.py  setup.ps1  starter_figure.py  Научная графика в научных статьях, квалификационных работах и презентациях с иллюстрациями.md  Научная графика в научных статьях, квалификационных работах и презентациях.md
chapters/chapter_01_general_principles/: README_chapter_01.md  ch01_01_chartjunk_vs_scientific_graph.py  ch01_02_anatomy_of_scientific_plot.py  ch01_03_axis_truncation_warning.py  ch01_04_variability_must_be_shown.py  ch01_05_color_is_not_enough.py  ch01_06_publication_export_example.py  sample1.py  sample2.py
chapters/chapter_02_environment/: README_chapter_02.md  ch02_01_check_environment_versions.py  ch02_02_default_vs_scientific_style.py  ch02_03_object_oriented_matplotlib.py  ch02_04_save_figure_formats.py  ch02_05_project_paths_and_data_loading.py  ch02_06_dataset_preview_clinical.py  ch02_07_reproducible_seed_demo.py
docs/: PROJECT_STRUCTURE.md
report/: ch10_02_descriptive_statistics.csv  ch10_05_missing_values_report.csv  ch10_06_environment_versions.csv  ch10_07_pipeline_summary.csv  ch11_07_web_html_export.html  ch12_01_figure_quality_checklist.csv  ch12_03_figure_audit.csv  ch12_03_units_audit.csv  ch12_04_export_checklist.csv  ch12_04_journal_requirements_table.csv  ch12_05_peer_review_form.csv  ch12_06_common_mistakes_catalog.csv
templates/: figure_caption_template.md  scientific_figure_template.py
(+163 files in other folders)
